# sfticks

./: .gitignore  CMakeLists.txt  LICENCE  Makefile  README.md
include/: CMakeLists.txt  cmakeconfig.hh.in  misc.hh
include/FG/: ArrayProperty.hh  AssemblerMk1.hh  BaseObject.hh  Blender.hh  BoolProperty.hh  Building.hh  ByteProperty.hh  CMakeLists.txt  Component.hh  ConstructorMk1.hh  ConveyorAttachmentMerger.hh  ConveyorAttachmentSplitter.hh  ConveyorAttachmentSplitterSmart.hh  ConveyorBelt.hh  ConveyorBeltLogic.hh  ConveyorBeltMk1.hh  ConveyorBeltMk2.hh  ConveyorBeltMk3.hh  ConveyorBeltMk4.hh  ConveyorBeltMk5.hh  ConveyorLift.hh  ConveyorLiftMk1.hh  ConveyorLiftMk2.hh  ConveyorLiftMk3.hh  ConveyorLiftMk4.hh  ConveyorLiftMk5.hh  DescObject.hh  DocsJSON.hh  DroneStation.hh  Entity.hh  EnumProperty.hh  Enums.hh  FactoryConnectionComponent.hh  FactoryCustomizationData.hh  FloatProperty.hh  FoundryMk1.hh  GeneratorCoal.hh  GeneratorFuel.hh  GeneratorNuclear.hh  GeneratorUnit.hh  (+43 more)
include/SFT/: BeltSubsystem.hh  CMakeLists.txt  DCG.hh  DCGComponent.hh  DCGEdge.hh  DCGNode.hh  Loader.hh  Reader.hh  Trace.hh  tests.hh  tick.hh
src/: ArrayProperty.cc  ArrayProperty.hh  BeltSubsystem.cc  BeltSubsystem.hh  BoolProperty.cc  BoolProperty.hh  ByteProperty.cc  ByteProperty.hh  CMakeLists.txt  DCG.cc  DCG.hh  DCGComponent.cc  DCGComponent.hh  DCGEdge.cc  DCGEdge.hh  DCGNode.cc  DCGNode.hh  EnumProperty.cc  EnumProperty.hh  Exception.cc  Exception.hh  FGAssemblerMk1.cc  FGAssemblerMk1.hh  FGBaseObject.cc  FGBlender.cc  FGBlender.hh  FGBuilding.cc  FGBuilding.hh  FGComponent.cc  FGComponent.hh  FGConstructorMk1.cc  FGConstructorMk1.hh  FGConveyorAttachmentMerger.cc  FGConveyorAttachmentMerger.hh  FGConveyorAttachmentSplitter.cc  FGConveyorAttachmentSplitter.hh  FGConveyorAttachmentSplitterSmart.cc  FGConveyorAttachmentSplitterSmart.hh  FGConveyorBelt.cc  FGConveyorBelt.hh  (+162 more)
src/FG/: AssemblerMk1.cc  BaseObject.cc  Blender.cc  BoolProperty.cc  Building.cc  ByteProperty.cc  CMakeLists.txt  Component.cc  ConstructorMk1.cc  ConveyorAttachmentMerger.cc  ConveyorAttachmentSplitter.cc  ConveyorAttachmentSplitterSmart.cc  ConveyorBelt.cc  ConveyorBeltLogic.cc  ConveyorBeltMk1.cc  Entity.cc  (+63 more)
(+36 files in other folders)
